@@ -45,6 +45,7 @@ following names for their contribution to the product.
 * Jeremy Baron
 * Juliano F. Ravasi
 * Louperivois
+* Marooned
 * Matt Johnston
 * Max Semenik
 * Michael De La Rue
